# SandSim

./: .gitignore  CMakeLists.txt  README.md
include/: Cell.hpp  Grid.hpp  Math.hpp  ult.hpp
lib/: raylib.lib
src/: cell.cpp  grid.cpp  main.cpp
